[1.540] sync - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang=ru>
+<html lang=ru id=faq>
 
 <!-- If you make edits to any FAQ documents, please start each sentence
      on a new line, and try to keep the general formatting consistent
@@ -244,8 +244,3 @@ Eric Jackson, Wim Vandeputte и Chris Cappuccio.
 <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
 Для общих вопросов об OpenBSD используйте соответствующие
 <a href="https://www.openbsd.org/mail.html">почтовые рассылки</a>.
-
-<p>
-<small>
-$OpenBSD: index.html,v 1.538 2019/02/26 23:53:55 tj Exp $
-</small>
