[1.327] sync - faq/faq8.html

--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -261,7 +261,7 @@ lookup file bind
 используемым ядром, т.е. вы не можете пользоваться этим устройством.
 
 <p>
-PCI и многие другие типы устройств предоставляют о себе так называемую
+PCI, как и многие другие типы устройств, предоставляют о себе так называемую
 информацию идетификации, чтобы ОС могла правильно распознать и
 работать с ними. В добавлении этого механизма распознавания нет ничего
 сложного, а вот добавление поддержки самого устройства - нет.
