[1.442] sync - security.html

--- a/security.html
+++ b/security.html
@@ -1,28 +1,30 @@
-<!DOCTYPE HTML PUBLIC  "-//W3C//DTD HTML 4.01 Transitional//EN"
-	"http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBSD: Безопасность</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" content="This document copyright 1997-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="https://www.openbsd.org/security.html">
-</head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238e">
+<style>
+h3 {
+	color: var(--red);
+}
+</style>
 
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<i><font color="#0000ff">Open</font></i><font color="#000084">BSD</font></a>
-<font color="#e00000">Безопасность</font>
+<i>Open</i><b>BSD</b></a>
+Безопасность
 </h2>
+
 <hr>
-<p>
 
+<p>
 Используйте ссылки ниже, если интересуетесь безопасностью конкретного релиза.
-<p>
 
+<p>
 <a href="https://openbsd.org/errata21.html">2.1</a>,
 <a href="https://openbsd.org/errata22.html">2.2</a>,
 <a href="https://openbsd.org/errata23.html">2.3</a>,
@@ -73,10 +75,10 @@
 <br>
 <hr>
 
-<a name="goals"></a>
 <ul>
-<li><h3><font color="#e00000">Цели</font></h3><p>
+<li><h3 id=goals>Цели</h3>
 
+<p>	
 OpenBSD верит в стойкую безопасность. Мы стремимся быть ПЕРВЫМИ в области
 безопасности (если уже не стали ими). Благодаря нашей открытой модели
 разработки, мы имеем абсолютно бескомпромиссный взгяд на вопросы
@@ -85,27 +87,26 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 <a href="crypto.html">криптографии</a>, используемой в OpenBSD, у нас
 больше возможностей и подходов к устранению проблем безопасности.
 
-<a name="disclosure"></a>
-<li><h3><font color="#e00000">Приинцип абсолютной открытости</font></h3><p>
+<li><h3 id=disclosure>Приинцип абсолютной открытости</h3>
 
-
+<p>
 Как и большинство читателей
 <a href="https://www.securityfocus.com/archive/1">
 рассылки BUGTRAQ</a>, мы верим в преимущества абсолютного разглашения
 проблем безопасности. Среди множества операционных систем мы, похоже,
 первые кто использует такой подход. Многие производители, в том
 числе и свободного программного обеспечения, все ещё пытаются скрыть
-какие-то нюансы от своих пользователей.<p>
+какие-то нюансы от своих пользователей.
 
+<p>
 Информация, касающаяся безопасности, распространяется очень быстро среди
 взломщиков, но наш опыт позволяет уже в течении часа
 выпускать исправления. Поэтому мы считаем, что полное разглашение
-о проблемах поможет людям, которые заботятся и переживают по поводу
-безопасности.<p>
+о проблемах поможет людям, которые заботятся о своей безопасности.<p>
 
-<a name="process"></a>
-<li><h3><font color="#e00000">Аудит процесс</font></h3><p>
+<li><h3 id=process>Аудит процесс</h3>
 
+<p>	
 От шести до двенадцати человек входят в команду, кто продолжает
 искать и исправлять ошибки в нашем репозитории. Мы проводим аудит с
 лета 1996г. Процесс по улучшению безопасности охватывает все части системы,
@@ -117,16 +118,18 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 аудита почти в каждом компоненте системы. Были найдены совершенно
 новые категории проблем безопасности, и часто исходной код, который
 уже прошёл аудит, нуждался в дополнительной перепроверке. Исходной
-код обычно проверяется несколько раз разными людьми с разным опытом.<p>
+код обычно проверяется несколько раз разными людьми с разным опытом.
 
+<p>
 Некоторые члены из нашей аудит команды работали в Secure Networks -
 компании, занимающейся сканированием сетей на предмет сетевых уявзвимостей
 и созданием Ballista - пакет программ для проверки сетей на безопасность.
 (Secure Networks бала куплена Network Associates, Ballista переименована
 в Cybercop Scanner.) Эта компания проводила множество тестов и исследований
 уязвимости и, таким образом, имеет хороший опыт в данной области. OpenBSD
-проходила все проверки Ballista с первого же дня тестирования.<p>
+проходила все проверки Ballista с первого же дня тестирования.
 
+<p>
 Другой аспект процесса проверки - проактивность. Во многих случаях мы
 обнаруживаем, что найденная уязвимость неактуальна. Тем не менее, в ходе
 процесса аудита мы находим множество ошибок, стараемся их исправить, даже
@@ -135,22 +138,21 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 ошибок невнимательного программирования и только по прошествии нескольких
 месяцев обнаружили, что они действительно опасны. (Или, более вероятно, что
 кто-то на <a href="https://www.securityfocus.com/archive/1">BUGTRAQ</a>
-опубликует, что другие операционные системы уязвимы к `недавно обнаруженной
-проблеме`, и тогда выяснится, что в OpenBSD эта ошибка уже была исправлена
+опубликует, что другие операционные системы уязвимы к <q>недавно обнаруженной
+проблеме</q>, и тогда выяснится, что в OpenBSD эта ошибка уже была исправлена
 ещё в прошлом релизе). В других случаях, мы застрахованы от реализации
 множества атак лишь потому, что мы исправили один из промежуточных шагов,
 необходимых для их реализации. Примером того, где нам удалось добиться
 успеха, является рекомендация lpd, которую мы получили благодаря Secure
-Networks.<p>
+Networks.
 
-<a name="newtech"></a>
-<li><h3><font color="#e00000">Новые технологии</font></h3><p>
+<li><h3 id=newtech>Новые технологии</h3>
 
+<p>
 Проверяя исходники, у нас часто появляются новые идеи и мы находим новые
 способы решения тех или иных проблем. Иногда бывает и так, что найденные
 решения уже использовались в какой-то программе, написанной ранее, но,
 возможно, не на таком уровне, на каком это делаем мы.
-<p>
 
 <ul>
   <li>strlcpy() and strlcat()
@@ -170,17 +172,18 @@ Networks.<p>
   <li>ProPolice
   <li>... <a href="https://www.openbsd.org/innovations.html">и другие</a>
 </ul>
+
+<li><h3 id=reward>Награда</h3>
+
 <p>
-
-<li><h3><font color="#e00000">Награда</font></h3><p>
-
 Наш проактивный процесс аудита действительно оправдан. Заявления
-подобно ``Эта проблема была устранена в OpenBSD приблизительно 6
-месяцев назад'' стали обычным явлением на security-форумах подобных
-<a href="http://online.securityfocus.com/archive/1">BUGTRAQ</a>.<p>
+подобно <q>Эта проблема была устранена в OpenBSD приблизительно 6
+месяцев назад</q> стали обычным явлением на security-форумах подобных
+<a href="https://www.securityfocus.com/archive/1">BUGTRAQ</a>.
 
+<p>
 Наиболее интенсивная часть аудита происходила перед релизом OpenBSD 2.0,
-а так же в течение перехода с 2.0-&gt;2.1, в конце 1996 и первой половины
+а так же в течение перехода с 2.0&rarr;2.1, в конце 1996 и первой половины
 1997. Тысячи (да, именно тысячи) проблем безопасности были быстро
 устранены в течение этого почти годового периода; ошибки подобно стандартным
 переполнением буфера, слабостям реализации протокола, сбору информации,
@@ -190,7 +193,7 @@ Networks.<p>
 не находим так много ошибок, это простой факт их исчезновения. Однако недавно
 найденные и исправленные проблемы безопасности, имеют тенденцию быть
 значительно более сложными или неясными. Тем не менее, мы будем продолжать
-проводить аудит по ряду причин:<p>
+проводить аудит по ряду причин:
 
 <ul>
 <li>Иногда мы находим простые проблемы, которые мы пропустили ранее.
@@ -199,14 +202,14 @@ Networks.<p>
 <li>Поиск и исправление едва заметных уязвимостей в сложной программе
 доставляет удовольствие.
 </ul>
+
 <p>
-
 Процесс аудита ещё не закончен, и, как вы видите, мы продолжаем находить
-и исправлять все новые и новые изъяны в безопасности.<p>
+и исправлять все новые и новые изъяны в безопасности.
 
-<a name="default"></a>
-<li><h3><font color="#e00000">"Secure by Default"</font></h3><p>
+<li><h3 id=default><q>Secure by Default</q></h3>
 
+<p>
 Для того, чтобы гарантировать, что начинающему пользователю нет надобности
 становиться экспертом по безопасности (точка зрения, которой, похоже,
 придерживаются другие авторы ПО), мы предлагаем операционную систему в
@@ -215,28 +218,30 @@ Networks.<p>
 с этой системой, он поймет, что нужно разрешить работу лишь некоторых
 демонов и других частей системы. По мере изучения того, как запустить
 какой-то новый сервер, новичок, скорее всего, ознакомится с требованиями
-безопасности.<p>
+безопасности.
 
+<p>
 Это совершенный контраст со все возрастающим числом систем, которые
 поставляются с NFS, mountd, web-серверами и другими запущенными по
 умолчанию службами, в первые же минуты после инсталляции создающими
-для своих пользователей проблемы безопасности.<p>
+для своих пользователей проблемы безопасности.
 
-<a name="crypto"></a>
-<li><h3><font color="#e00000">Криптография</font></h3><p>
+<li><h3 id=crypto>Криптография</h3>
 
+<p>
 Так как проект OpenBSD находится в Канаде, у нас есть возможность
 использовать криптографию. Для получения дополнительной информации, читайте
 страницы о том,
 <a href="crypto.html">что мы уже сделали при помощи криптографии</a>.
 
-<li><h3><font color="#e00000">Advisories</font></h3><p>
+<li><h3 id=advisories>Advisories</h3>
 
+<p>
 Пожалуйста обратите внимание на ссылки вверху страницы.
 
-<a name="watching"></a>
-<li><h3><font color="#e00000">Следите за изменениями</font></h3><p>
+<li><h3 id=watching>Следите за изменениями</h3>
 
+<p>
 Так как относительно безопасности мы выбрали проактивную позицию, мы
 не перестаем находить и устранять новые проблемы безопасности. Тем не
 менее, не все из них придаются широкой огласке. Происходит это из-за того,
@@ -245,24 +250,26 @@ Networks.<p>
 которые мы уже исправили в прошлом, оказывается, могли были привести к
 проблемам безопасности, о которых мы тогда не могли подумать и предсказать.
 У нас нет столько времени, чтобы официально сообщать обо всех подобных
-исправлениях.<p>
+исправлениях.
 
+<p>
 Таким образом, в репозитории обычно есть незначительные исправления для
 последнего релиза OpenBSD. Мы гарантируем, что эти исправления имеют
 минимальное влияние на безопасность и непригодны для реализации атак.
 Если мы обнаружим, что проблема определённо связана с безопасностью,
-патчи появятся здесь <strong>ОЧЕНЬ</strong> быстро.<p>
+патчи появятся здесь <strong>ОЧЕНЬ</strong> быстро.
 
+<p>
 Вот что мы можем посоветовать тем, кто действительно заботится о
-безопасности:<p>
+безопасности:
 
 <ul>
 <li>Если вы разбираетесь в технической стороне вопроса, следите за
-	<a href="../mail.html">рассылкой, про изменениях в коде</a>
+	<a href="https://www.openbsd.org/mail.html">рассылкой, про изменениях в коде</a>
 	и не пропускайте тех из них, которые связаны с безопасностью.
 	А так как подтверждение о возможных атаках для многих изменений в коде
 	не доказана, не ожидайте, что в commit-сообщении будет сказано
-	"SECURITY FIX!". Если проблема доказана и серьёзна, исправление
+	<q>SECURITY FIX!</q>. Если проблема доказана и серьёзна, исправление
 	появится здесь очень быстро.
 <li>Постоянно использовать самые свежие исходники из репозитория и время от
 	времени полностью пересобирать систему (тщательно прочитайте
@@ -275,25 +282,20 @@ Networks.<p>
 	ежедневно.
 </ul>
 
-<p>
-<a name="reporting"></a>
-<li><h3><font color="#e00000">Сообщения о проблемах</font></h3><p>
+<li><h3 id=reporting>Сообщения о проблемах</h3>
 
-<p> Если вы обнаружили новую уязвимость, сообщите нам, отправив письмо на
+<p>
+Если вы обнаружили новую уязвимость, сообщите нам, отправив письмо на
 <a href="mailto:deraadt@openbsd.org">deraadt@openbsd.org</a>.
 <br>
 Если вы хотите зашифровать письмо при помощи PGP (пользуйтесь им
 только при крайней необходимости, так как это неудобно), используйте этот
 <a href="https://www.openbsd.org/advisories/pgpkey.txt">pgp ключ</a>.
 
-<p>
-<a name="papers"></a>
-<li><h3><font color="#e00000">Дополнительно</font></h3><p>
+<li><h3 id=papers>Дополнительно</h3>
 
+<p>
 Разработчиками OpenBSD написаны
-<a href="https://www.openbsd.org/papers/index.html">материалы</a>,
+<a href="https://www.openbsd.org/events.html">материалы</a>,
 некоторые из которых так или иначе связаны с темой security.
 </ul>
-
-</body>
-</html>
