--- a/goals.html
+++ b/goals.html
@@ -1,28 +1,30 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenBSD: Цели проекта</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" content="This document copyright 1996-2004 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="https://www.openbsd.org/goals.html">
-</head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238e">
+<style>
+h2 {
+	color: var(--red);
+}
+</style>
 
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<i><font color="#0000ff">Open</font></i><font color="#000084">BSD</font></a>
-<font color="#e00000">Цели проекта</font>
+<i>Open</i><b>BSD</b></a>
+Цели проекта
 </h2>
-<hr>
-<p>
 
+<hr>
+
+<p>
 Каждый разработчик OpenBSD имеет свои цели и приоритеты, но можно
 выделить список общих целей, к достижению которых стремятся все:
 
-<p>
 <ul>
 <li>Предоставить самую лучшую платформу для разработки программ.
     <a href="anoncvs.html">Предоставлять полный доступ к исходным кодам
@@ -73,22 +75,16 @@
 <li>Выпускать новый релиз приблизительно каждые шесть месяцев.
 </ul>
 
-<a name=funding></a>
-<h2><font color="#e00000">Финансирование проекта</font></h2>
+<h2 id=funding>Финансирование проекта</h2>
 
 Информацию об этом можно найти на нашей
 <a href="https://www.openbsd.org/donations.html">странице пожертвований</a>.
 
-<h2><font color="#e00000">Где живут разработчики?</font></h2>
+<h2>Где живут разработчики?</h2>
 
 На этой карте показаны примерные места проживания наших разработчиков.
 Мы будем стараться время от времени её обновлять, но сильно на это не
 рассчитывайте.
 
 <p>
-<center>
-<img src="images/map.jpg" height=508 width=950 alt= "World map">
-</center>
-
-</body>
-</html>
+<img src="images/map.jpg" height=508 width=950 alt="World map" style="margin: auto">
