[1.96] sync - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -62,16 +62,16 @@
     LibreSSL состоит из следующих компонентов:
     <ul>
         <li><a href="https://man.openbsd.org/crypto.3">
-	    libcrypto</a>: основная криптографическая библиотека</li>
+	    libcrypto</a>: основная криптографическая библиотека
         <li><a href="https://man.openbsd.org/ssl.3">
-	    libssl</a>: библиотека TLS</li>
+	    libssl</a>: библиотека TLS
         <li><a href="https://man.openbsd.org/tls_init.3">
 	    libtls</a>: новая TLS библотека, разработанная с целью более простого
-            создания защищенных приложений</li>
+            создания защищенных приложений
 	<li>Различные утилиты, такие как
 	    <a href="https://man.openbsd.org/openssl.1">openssl(1)</a>,
 	    <a href="https://man.openbsd.org/nc.1">nc(1)</a>, и
-	    <a href="https://man.openbsd.org/ocspcheck.8">ocspcheck(8)</a>.</li>
+	    <a href="https://man.openbsd.org/ocspcheck.8">ocspcheck(8)</a>.
     </ul>
 
     <p>
