[1.58] sync - libressl/releases.html

--- a/libressl/releases.html
+++ b/libressl/releases.html
@@ -7,8 +7,6 @@
 <link rel="canonical" href="https://www.libressl.org/releases.html">
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -32,21 +30,21 @@ ChangeLog</a> отражена история разработки LibreSSL.
 <p>
 Портируемая версия LibreSSL без проблем работает на следующих платформах:
 <ul>
-	<li>Linux (на ядре 3.17 или более новом)</li>
-	<li>FreeBSD (в версии 9.2 и более новых)</li>
-	<li>NetBSD (версия 7.0 или более новая)</li>
-	<li>HP-UX (11i)</li>
-	<li>Solaris (11 или более новые)</li>
-	<li>Mac OS X (протестированно в версии 10.8 и более новых)</li>
-	<li>AIX (5.3 и броее новые)</li>
+	<li>Linux (на ядре 3.17 или более новом)
+	<li>FreeBSD (в версии 9.2 и более новых)
+	<li>NetBSD (версия 7.0 или более новая)
+	<li>HP-UX (11i)
+	<li>Solaris (11 или более новые)
+	<li>Mac OS X (протестированно в версии 10.8 и более новых)
+	<li>AIX (5.3 и броее новые)
 </ul>
-</p>
+
 <p>
 LibreSSL работает и в Windows:
 <ul>
-	<li>Microsoft Windows (Vista или новее, x86 и x64)</li>
-	<li>Wine (32х битные и 64х битные)</li>
-	<li>Сборки с Visual Studio 2013 или с более новой версией, Mingw-w64 и Cygwin</li>
+	<li>Microsoft Windows (Vista или новее, x86 и x64)
+	<li>Wine (32х битные и 64х битные)
+	<li>Сборки с Visual Studio 2013 или с более новой версией, Mingw-w64 и Cygwin
 </ul>
 <p>
 
