--- a/libressl/signing.html
+++ b/libressl/signing.html
@@ -7,8 +7,6 @@
 <link rel="canonical" href="https://www.libressl.org/signing.html">
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -35,7 +33,7 @@
 которая доступна в последних версиях
 <a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>,
 <a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> и
-<a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a></li>, или при
+<a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a>, или при
 использовании GPG.
 
 </body>
