[1.92] fix broken links - goals.html

--- a/goals.html
+++ b/goals.html
@@ -35,9 +35,9 @@ h2 {
 <p>
 <li>Добавлять и интегрировать хороший код из других проектов, но только
     распространяемых по 
-    <a href="../policy.html">свободной лицензии</a>. ISC и Berkeley
-    предпочтительней всего, добавление нового GPL-кода не допускается,
-    NDA - не допускается никогда.
+    <a href="https://www.openbsd.org/policy.html">свободной лицензии</a>.
+    ISC и Berkeley предпочтительней всего, добавление нового GPL-кода не
+    допускается, NDA - не допускается никогда.
     Мы хотим предоставить исходники, которые каждый сможет использовать
     ДЛЯ ЛЮБЫХ ЦЕЛЕЙ, без ограничений. <strong>Мы стараемся делать наше
     ПО надежным и безопасным, и поощряем компании в использовании любых,
@@ -60,8 +60,8 @@ h2 {
 и т.д.)
 <p>
 <li>Создавать максимально аппаратно-независимый код.
-    <a href="plat.html">По возможности поддерживать как можно больше
-    различных платформ и устройств.</a>
+    <a href="https://www.openbsd.org/plat.html">По возможности поддерживать
+    как можно больше платформ и устройств.</a>
 <p>
 <li>Быть свободными от политики насколько это возможно; решения
     должны приниматься на основе технической целесообразности.
