[1.12] sync - libressl/goals.html

--- a/libressl/goals.html
+++ b/libressl/goals.html
@@ -7,7 +7,6 @@
 <link rel="canonical" href="https://www.libressl.org/goals.html">
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -19,18 +18,17 @@
 <hr>
 
 <ul>
-    <li>Модернизировать код OpenSSL, с целью сделать его более понятным, а
-        также упростить процесс аудита и исправлений.</li>
-    <li>Применять лучшую из практик для процесса разработки:
-        <ul>
-            <li>Проверка кода (Code Review).</li>
-            <li>Выпускать новые версии достаточно часто (Frequent releases).</li>
-            <li>Открытый процесс разработки (Open development process).</li>
-        </ul>
-    </li>
-    <li>Удалить ненужную или поломанную функциональность и поддержку ОС.</li>
-    <li>Использовать безопасные API на уровне ОС.</li>
-    <li>Предоставить безопасные альтернативные API для ОС, где нет таковых.</li>
+<li>Модернизировать код OpenSSL, с целью сделать его более понятным, а
+    также упростить процесс аудита и исправлений.
+<li>Применять лучшую из практик для процесса разработки:
+    <ul>
+    <li>Проверка кода (Code Review).
+    <li>Выпускать новые версии достаточно часто (Frequent releases).
+    <li>Открытый процесс разработки (Open development process).
+    </ul>
+<li>Удалить ненужную или поломанную функциональность и поддержку ОС.
+<li>Использовать безопасные API на уровне ОС.
+<li>Предоставить безопасные альтернативные API для ОС, где нет таковых.
 </ul>
 
 </body>
