[1.733] sync - index.html

--- a/index.html
+++ b/index.html
@@ -1,144 +1,113 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+    <meta charset=utf-8>
     <title>OpenBSD</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="the main OpenBSD page">
-    <meta name="copyright" content="This document copyright 1999-2019
-                                    by OpenBSD.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://www.openbsd.org/">
-    <style type="text/css">
-      body {
-        color: black;
-        background-color: white;
-        margin: 0 50px 0 0;
-      }
-      .main {
-        width: 100%;
-        height: 100%;
-        border: 0;
-        border-collapse: collapse;
-      }
-      .main td {
-        padding: 4px;
-      }
-      .sidebar {
-        background-color: #6bbdd6;
-        width: 175px;
-        border-right: 11px solid #007b9c;
-      }
-      .header {
-        text-align: center;
-      }
-      .header img {
-        margin-bottom: 19px;
-      }
-      .callout {
-        font-weight: bold;
-        color: #e00000;
-      }
-      .align-top {
-        vertical-align: top;
-      }
-      .align-bottom {
-        vertical-align: bottom;
-      }
-    </style>
-</head>
-<body>
-<table class="main">
-  <tr>
-    <td class="sidebar align-top">
-      <big><b>Проект OpenBSD</b></big><br>
-      &nbsp;<a href="goals.html">Цели проекта</a><br>
-      &nbsp;<a href="https://www.openbsd.org/plat.html">Платформы</a><br>
-      &nbsp;<a href="security.html">Безопасность</A>
-      &nbsp;<a href="crypto.html">Криптография</a><br>
-      &nbsp;<a href="https://www.openbsd.org/events.html">Встречи</a>
-      &nbsp;<a href="https://www.openbsd.org/innovations.html">Инновации</a><br>
-      <p>
-      <big><b>Скачать&nbsp;OpenBSD</b></big><br>
-      &nbsp;<a href="https://www.openbsd.org/faq/faq4.html#Download">Download</a><br>
-      <p>
-      <big><b>Исходники</b></big><br>
-      &nbsp;<a href="anoncvs.html">AnonCVS</a>
-      &nbsp;<a href="https://www.openbsd.org/cvsync.html">CVSync</a><br>
-      &nbsp;<a href="https://cvsweb.openbsd.org/">CVS Web</a><br>
-      &nbsp;<a href="https://github.com/openbsd">Проект на GitHub</a><br>
-      <p>
-      <big><b>Информация</b></big><br>
-      &nbsp;<a href="https://www.openbsd.org/plus.html">Changelog</a><br>
-      &nbsp;<a href="faq/index.html">FAQ</a><br>
-      &nbsp;<a href="https://man.openbsd.org">Man-страницы</a><br>
-      &nbsp;<a href="https://www.openbsd.org/errata65.html">Патчи</a><br>
-      &nbsp;<a href="ircs://irc.freenode.net:6697/openbsd">IRC</a><br>
-      &nbsp;<a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a><br>
-      &nbsp;<a href="https://www.openbsd.org/mail.html">Почтовые рассылки</a><br>
-      &nbsp;<a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
-            <a href="https://www.openbsd.org/artwork.html">Artwork</a><br>
-      &nbsp;<a href="hackathons.html">Хакатоны</a><br>
-      &nbsp;<a href="https://openbsd.org/support.html">Поддержка</a><br>
-      <p>
-      <big><b>Поддержка&nbsp;OpenBSD</b></big><br>
-      <!--
-      &nbsp;<a href="https://openbsdstore.com">Buy OpenBSD Products</a><br>
-      -->
-      &nbsp;<a href="https://www.openbsd.org/donations.html">Пожертвования</a><br>
-      &nbsp;<a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a>
-      <p>
-      <big><b>Русское сообщество</b></big><br>
-      &nbsp;<a href="ru-community/articles.html">Статьи</a>
-      &nbsp;<a href="https://vk.com/openbsd_hackers">Группа в VK</a>
-      <br>
-      &nbsp;<a href="https://github.com/openbsd-ru">Проект на GitHub</a>
-      <br>
+    <link rel="stylesheet" href="openbsd.css">
 
+<table id="project-main">
+  <tr class="align-top">
+    <td>
 
+      <h1>Проект OpenBSD</h1>
+      <ul>
+        <li><a href="goals.html">Цели проекта</a>
+        <li><a href="https://www.openbsd.org/plat.html">Платформы</a>
+        <li><a href="security.html">Безопасность</a>
+            <a href="crypto.html">Криптография</a>
+        <li><a href="https://www.openbsd.org/events.html">Встречи и доклады</a>
+        <li><a href="https://www.openbsd.org/innovations.html">Инновации</a>
+      </ul>
+
+      <h1>Скачать OpenBSD</h1>
+      <ul>
+        <li><a href="faq/faq4.html#Download">Download</a>
+      </ul>
+
+      <h1>Исходники</h1>
+      <ul>
+        <li><a href="anoncvs.html">AnonCVS</a>
+            <a href="https://www.openbsd.org/cvsync.html">CVSync</a>
+        <li><a href="https://cvsweb.openbsd.org/">CVS Web</a>
+        <li><a href="https://github.com/openbsd">GitHub зеркало</a>
+      </ul>
+
+      <h1>Информация</h1>
+      <ul>
+        <li><a href="https://www.openbsd.org/plus.html">Changelog</a>
+        <li><a href="faq/index.html">FAQ</a>
+        <li><a href="https://man.openbsd.org">Man-страницы</a>
+        <li><a href="https://www.openbsd.org/errata65.html">Патчи</a>
+        <li><a href="ircs://irc.freenode.net:6697/openbsd">IRC</a>
+        <li><a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a>
+        <li><a href="https://www.openbsd.org/mail.html">Почтовые рассылки</a>
+        <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
+            <a href="https://www.openbsd.org/artwork.html">Artwork</a>
+        <li><a href="hackathons.html">Хакатоны</a>
+        <li><a href="https://www.openbsd.org/support.html">Поддержка</a>
+      </ul>
+
+      <h1>Поддержка OpenBSD</h1>
+      <ul>
+        <!--
+        <li><a href="https://openbsdstore.com">Buy OpenBSD Products</a>
+        -->
+        <li><a href="https://www.openbsd.org/donations.html">Пожертвования</a><br>
+        <li><a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a>
+      </ul>
+
+      <h1>Русское сообщество</h1>
+      <ul>
+        <li><a href="ru-community/articles.html">Статьи</a>
+        <li><a href="https://vk.com/openbsd_hackers">Группа в VK</a>
+        <li><a href="https://github.com/openbsd-ru">Проект на GitHub</a>
+      </ul>
     </td>
-    <td class="align-top">
-      <div class="header">
-        <a href="https://www.openbsd.org/65.html">
-        <img border="0" src="images/puffy65.gif" height="198" width="599" alt="[OpenBSD 6.5]"></a>
-        <br>
-        <span class="callout">
-        Всего две уязвимости при стандартной установке за все время существования системы!<br>
-        </span>
-      </div>
+
+    <td>
+      <h1 class="header">
+         <img src="images/puffy65.gif" height="198" width="599" alt="[OpenBSD 6.5]"></a>
+      </h1>
+
+      <p id="callout">
+      Всего две уязвимости при стандартной установке за все время существования системы!
 
       <p>
-      В рамках проекта OpenBSD разрабатывается <b>СВОБОДНАЯ</b>, мультиплатформенная, основанная
+      В рамках проекта OpenBSD разрабатывается <strong>СВОБОДНАЯ</strong>, мультиплатформенная, основанная
       на коде 4.4BSD, UNIX-подобная операционная система. Мы придаем большое внимание
       переносимости, следованию стандартам, точности, <a href="security.html">безопасности</a> и
       <a href="crypto.html">криптографии</a>. В качестве примера успеха проекта можно назвать
       <a href="openssh/index.html">OpenSSH</a>, первоночально написанную для OpenBSD.
+
       <p>
       Информацию по поводу загрузки OpenBSD можно найти на станице download.
+
       <p>
-      Последний релиз нашей системы, <a href="https://www.openbsd.org/65.html">OpenBSD 6.5</a>,
+      Последний релиз нашей системы,
+      <a href="https://www.openbsd.org/65.html">OpenBSD 6.5</a>,
       вышел на неделю раньше запланированного срока - 24 апреля 2019 года.
+
       <p>
       OpenBSD разрабатывается добровольцами. Процесс разработки, а также
       <a href="hackathons.html">встречи разработчиков</a> возможны благодаря финансовым взносам,
       собранным <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
       Эти пожертвования гарантируют дальнейшую разработку OpenBSD, которая остается
       <a href="https://www.openbsd.org/policy.html">свободной</a> для всех.
-    </td>
-  </tr>
-  <tr>
-    <td class="sidebar align-bottom">
+
+  <tr class="align-bottom">
+    <td>
       <a href="images/rack2009.jpg">
-      <img width="60" height="90" src="images/rack2009-s.png"
-       style="float:left;"></a>
-   </td>
-    <td class="align-bottom">
+      <img width="60" height="90" src="images/rack2009-s.png" alt="rack"></a>
+    <td>
       <hr>
       Associated projects:
       <a href="openssh/index.html">OpenSSH</a>,
       <a href="openbgpd/index.html">OpenBGPD</a>,
       <a href="openntpd/index.html">OpenNTPD</a>,
       <a href="https://www.opensmtpd.org">OpenSMTPD</a>,
-      <a href="http://www.openiked.org">OpenIKED</a>,
+      <a href="https://www.openiked.org">OpenIKED</a>,
       <a href="https://mandoc.bsd.lv">mandoc</a>,
       <a href="libressl/index.html">LibreSSL</a>
       <br>
@@ -152,5 +121,3 @@
     </td>
   </tr>
 </table>
-</body>
-</html>
