[1.183] sync - faq/faq15.html

--- a/faq/faq15.html
+++ b/faq/faq15.html
@@ -33,7 +33,7 @@ PERFORMANCE OF THIS DOCUMENTATION
 <i>Open</i><b>BSD</b></a>
 FAQ - Работа с пакетами
 <small>
-<a href="index.html">[FAQ Index]</a>
+<a href="index.html">[FAQ - На главную]</a>
 </small>
 </h2>
 <hr>
