--- a/openntpd/goals.html
+++ b/openntpd/goals.html
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenNTPD: Цели проекта</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Goals">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openntpd.org/goals.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -18,39 +16,30 @@
 <hr>
 
 <p>
-Наша цель - сделать NTP вездесущим, предоставив свободную реализацию,
-которая была бы безопасной и простой в настройке.
+Наша цель - сделать NTP используемым повсеместно, предоставив свободную
+реализацию, которая была бы безопасной и простой в настройке.
 
 <ul>
-	<li>
-    Быть как можно более <b>защищенной</b>. Писать код как можно
+<li>Быть как можно более <strong>защищенной</strong>. Писать код как можно
     внимательней, проводя строгие проверки, в особенности, что касается
     сетевых входных данных, и использования операций с буферами.
     Использовать разграничение привелегий, чтобы уменьшить вред от
     возможных уязвимостей.
-	</li>
-	<li>
-    Предоставить <b>бережную</b> реализацию, подходящую и
+
+<li>Предоставить <strong>бережную</strong> реализацию, подходящую и
     удовлетворяющую большинство пользователей. Не пытаться поддерживать
     все что только можно, но охватить основную функциональность.
-	</li>
-	<li>
-    Добиться уровня <b>&quot;Just Work&quot;</b>.
-	</li>
-	<li>
-    Упростить настройку; сделать <b>конфигурацию минимальной</b>.
-	</li>
-	<li>
-    Оптимальное взаимодействуйте с
+
+<li>Добиться уровня <strong>"Just Work"</strong>.
+
+<li>Упростить настройку; сделать <strong>конфигурацию минимальной</strong>.
+
+<li>Оптимальное взаимодействуйте с
     <a href="http://www.pool.ntp.org/en/">кластером пулов NTP</a>,
     безопасно обеспечиваемое DNS поиском.
-	</li>
-	<li>
-    Достигнуть <b>разумной точности</b>. Не стоит приносить в жертву
-    безопасный дизайн просто ради того, чтобы увеличить точность до
-    наносекунд.
-	</li>
-</ul>
 
-</body>
-</html>
+<li>Достигнуть <strong>разумной точности</strong>. Не стоит приносить
+    в жертву безопасный дизайн просто ради того, чтобы увеличить точность
+    до наносекунд.
+
+</ul>
