--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <a href="openssh/index.html">OpenSSH</a>,
       <a href="openbgpd/index.html">OpenBGPD</a>,
       <a href="openntpd/index.html">OpenNTPD</a>,
-      <a href="https://www.opensmtpd.org">OpenSMTPD</a>,
+      <a href="opensmtpd/index.html">OpenSMTPD</a>,
       <a href="https://www.openiked.org">OpenIKED</a>,
       <a href="https://mandoc.bsd.lv">mandoc</a>,
       <a href="libressl/index.html">LibreSSL</a>
