--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -18,7 +18,7 @@
         <li><a href="security.html">Безопасность</a>
         <li><a href="manual.html">Руководства</a>
         <li><a href="list.html">Почтовые рассылки</a>
-        <li><a href="donations.html">Пожертвования</a>
+        <li><a href="https://opensmtpd.org/donations.html">Пожертвования</a>
       </ul>
 
       <h1>Для OpenBSD</h1>
