[1.734] sync - index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
             <a href="https://www.openbsd.org/artwork.html">Artwork</a>
         <li><a href="hackathons.html">Хакатоны</a>
+        <li><a href="https://www.openbsd.org/groups.html">Группы пользователей</a>
         <li><a href="https://www.openbsd.org/support.html">Поддержка</a>
       </ul>
 
