[1.16] sync - faq/faq16.html

--- a/faq/faq16.html
+++ b/faq/faq16.html
@@ -40,7 +40,7 @@ FAQ - Виртуализация
 
 <ul>
   <li><a href="#Introduction" >Вступление</a>
-  <li><a href="#Prerequisites">Предпосылки</a>
+  <li><a href="#Prerequisites">Подготовка</a>
   <li><a href="#StartVm"      >Запуск VM</a>
   <li><a href="#VMMnet"       >Сеть</a>
 </ul>
@@ -86,7 +86,7 @@ OpenBSD поставляется с гипервизором <a href="https://ma
 Поддерживаемые гостевые операционные системы в настоящее время ограничены OpenBSD и Linux.
 Поскольку поддержка VGA пока отсутствует, гостевая ОС должна поддерживать последовательную консоль.
 
-<h2 id="Prerequisites">Предпосылки</h2>
+<h2 id="Prerequisites">Подготовка</h2>
 
 Для использования <a href="https://man.openbsd.org/vmm">vmm(4)</a> 
 требуется процессор с поддержкой вложенных страниц (nested paging support). 
