--- a/libressl/goals.html
+++ b/libressl/goals.html
@@ -1,12 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>LibreSSL: Цели проекта</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" content="This document copyright 2016 by OpenBSD.">
-<link rel="canonical" href="https://www.libressl.org/goals.html">
-</head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
 
+<title>LibreSSL: Цели проекта</title>
+<link rel="canonical" href="https://www.libressl.org/goals.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -30,6 +27,3 @@
 <li>Использовать безопасные API на уровне ОС.
 <li>Предоставить безопасные альтернативные API для ОС, где нет таковых.
 </ul>
-
-</body>
-</html>
