--- a/libressl/mail.html
+++ b/libressl/mail.html
@@ -1,12 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>LibreSSL: Почтовые рассылки</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" content="This document copyright 2016 by OpenBSD.">
-<link rel="canonical" href="https://www.libressl.org/mail.html">
-</head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
 
+<title>LibreSSL: Почтовые рассылки</title>
+<link rel="canonical" href="https://www.libressl.org/mail.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -20,12 +17,12 @@
 <p>
 Для обсуждения LibreSSL есть две рассылки:
 <p>
-<a href="email:libressl@openbsd.org">libressl@openbsd.org</a> - открытая для всех, где обсуждаются технические стороны проекта LibreSSL на любой ОС.
+<a href="email:libressl@openbsd.org">libressl@openbsd.org</a>
+&mdash;
+открытая для всех, где обсуждаются технические стороны проекта LibreSSL на любой ОС.
 <p>
-<a href="email:libressl-security@openbsd.org">libressl-security@openbsd.org</a> - доступная только для разработчиков LibreSSL, где обсуждаются уязвимости в OpenSSL или LibreSSL.
+<a href="email:libressl-security@openbsd.org">libressl-security@openbsd.org</a>
+&mdash;
+доступная только для разработчиков LibreSSL, где обсуждаются уязвимости в OpenSSL или LibreSSL.
 <p>
 Больше информации касательно рассылок можно найти на странице <a href="https://www.openbsd.org/mail.html">https://www.openbsd.org/mail.html</a>.
-
-
-</body>
-</html>
