[1.17] sync - libressl/papers.html

--- a/libressl/papers.html
+++ b/libressl/papers.html
@@ -1,12 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>LibreSSL: Доклады</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" content="This document copyright 2016 by OpenBSD.">
-<link rel="canonical" href="https://www.libressl.org/papers.html">
-</head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
 
+<title>LibreSSL: Доклады</title>
+<link rel="canonical" href="https://www.libressl.org/papers.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -22,7 +19,7 @@
 <strong>
 <a href="https://www.openbsd.org/papers/bsdcan2019-tls13.pdf">Design and verification of the TLS 1.3 handshake state machine in LibreSSL</a>
 by Theo Buehler
-</strong><br>
+</strong> (<a href="https://www.youtube.com/watch?v=MCVIBwGOwNY">video</a>)<br>
 </blockquote>
 
 <h3>Доклад на FSec 2015</h3>
@@ -48,6 +45,3 @@ by Ted Unangst
 by Bob Beck
 </strong><br>
 </blockquote>
-
-</body>
-</html>
