--- a/libressl/signing.html
+++ b/libressl/signing.html
@@ -1,12 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>LibreSSL: Электронная подпись релизов</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="copyright" content="This document copyright 2016 by OpenBSD.">
-<link rel="canonical" href="https://www.libressl.org/signing.html">
-</head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
 
+<title>LibreSSL: Электронная подпись релизов</title>
+<link rel="canonical" href="https://www.libressl.org/signing.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
@@ -18,8 +15,8 @@
 <hr>
 
 <p>
-Все релизы портированной версии LibreSSL получают электронную подпись при помощи
-<a href="https://man.openbsd.org/signify.1">signify(1)</a>, при использовании
+Все архивы с релизами портированной версии LibreSSL подписаны (получают электронную подпись)
+при помощи <a href="https://man.openbsd.org/signify.1">signify(1)</a>, при использовании
 открытого (public) ключа:
 <p>
 <a href="https://github.com/libressl-portable/portable/commit/c5c2aa37be6134f6552070ab21f49d53ebfe86e6">RWQg/nutTVqCUVUw8OhyHt9n51IC8mdQRd1b93dOyVrwtIXmMI+dtGFe</a>
@@ -35,6 +32,3 @@
 <a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> и
 <a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a>, или при
 использовании GPG.
-
-</body>
-</html>
