--- a/openntpd/papers.html
+++ b/openntpd/papers.html
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenNTPD: Доклады и презентации</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD related papers and presentations">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 <link rel="canonical" href="http://www.openntpd.org/papers.html">
-</head>
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -19,40 +17,37 @@
 
 <h3>Доклад на 21C3</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://bulabula.org/papers/21c3/">OpenBGPD и OpenNTPD</a>,
-Henning Brauer</strong></font><br>
+<strong>
+<a href="https://quigon.bsws.de/papers/21c3/">OpenBGPD и OpenNTPD</a>,
+by Henning Brauer</strong><br>
 Доклад о двух проектах
 <a href="http://www.openbgpd.org/">OpenBGPD</a> и
 <a href="http://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
-<a href="http://www.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
+<a href="https://events.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
 в Берлине (ФРГ) в декабре 2004 года.
 </blockquote>
 
 <h3>Доклад на OpenCon 2004</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://bulabula.org/papers/opencon04/ntpd/">OpenNTPD</a>,
-Henning Brauer</strong></font><br>
-Доклад о <a href="http://www.openntpd.org/">OpenNTPD</a>, который
-был прочитан на <a href="http://www.opencon.org/">OpenCon 2004</a> в
-Венции (Италия) в декабре 2004 года.
+<strong>
+<a href="https://quigon.bsws.de/papers/opencon04/ntpd/">OpenNTPD</a>,
+by Henning Brauer</strong><br>
+Доклад о
+<a href="http://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
+<a href="https://web.archive.org/web/20041210140852/http://www.opencon.org/">OpenCon 2004</a>
+в Венции (Италия) в декабре 2004 года.
 </blockquote>
 
 <h3>Доклад на SUCON 04</h3>
 <blockquote>
-<font color="#009000"><strong>
-<a href="http://www.openbsd.org/papers/ntpd_sucon04/index.html">OpenNTPD</a>,
-Henning Brauer
-</strong></font><br>
+<strong>
+<a href="https://www.openbsd.org/papers/ntpd_sucon04/">OpenNTPD</a>,
+by Henning Brauer
+</strong><br>
 Доклад о <a href="http://www.openntpd.org/">OpenNTPD</a> был прочитан на
-<a href="http://www.suug.ch/sucon/04/">SUCON 04</a>
+<a href="https://web.archive.org/web/20040812043217/http://www.suug.ch/sucon/04/">SUCON 04</a>
 в Цюрихе (Швейцария) в сентябре 2004 года. Там описываются детали реализации
 <a href="http://www.openntpd.org/">OpenNTPD</a>.
 <a href="http://www.openbsd.org/papers/ntpd_sucon04.tgz">Архив</a> презентации
 для просмотра в оффлайн.
 </blockquote>
-
-
-</body>
-</html>
